# cnn_from_scratch

./: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  a.cpp  cnn.cpp  cnn.h  functions.cpp  functions.h  linAlgebra.cpp  linAlgebra.h  test.cpp  test.h  train.cpp  train.h
